--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   firebase_auth: ^0.14.0+5
   google_sign_in: ^4.4.2
   get_it: ^4.0.1
+  dartz: any
+  data_connection_checker: ^0.3.4
+  flutter_bloc: ^4.0.0
+  equatable: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
