--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.14.0+5
+  firebase_database: any
+  cloud_firestore: any
   google_sign_in: ^4.4.2
   get_it: ^4.0.1
   dartz: any
