--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.14.0+5
   firebase_database: 3.1.5
+  firebase_messaging: ^6.0.1
   cloud_firestore: 0.13.5
   google_sign_in: ^4.4.2
   get_it: ^4.0.1
