--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   qrscan: ^0.2.17
   image_gallery_saver: '^1.6.2'
   image_picker: 0.6.7+12
+  flutter_local_notifications: ^3.0.1+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
